compiler/testData/diagnostics/tests/cast/AsErasedWarning.kt

fun ff(a: Any) = <!UNCHECKED_CAST!>a as MutableList<String><!>
